# containers-cmangos-wotlk

./: README.md  WORKSPACE
bazel/: common.bzl
containers/: BUILD.bazel  variants.bzl
containers/builddeps/: BUILD.bazel  packages.lock.json  packages.yaml
containers/builder/: BUILD.bazel
containers/builder/rootfs/always-initdb.d/: update-db.sh
containers/builder/rootfs/docker-entrypoint-initdb.d/: create-db.sh
containers/builder/rootfs/opt/mangos/db/sql/: user_accounts.sql
containers/builder/rootfs/opt/mangos/etc/: ahbot.conf  aiplayerbot.conf  mangosd.conf  realmd.conf
containers/builder/rootfs/opt/run/: build.sh  database.sh
containers/database/: BUILD.bazel
containers/extractor/: BUILD.bazel
containers/release/: BUILD.bazel
containers/runtime/: BUILD.bazel  packages.lock.json  packages.yaml
docs/: tagline.txt  title.txt
tests/bots/: docker-compose.yaml
tests/default/: docker-compose.yaml
